--- a/README.Rmd
+++ b/README.Rmd
@@ -25,7 +25,7 @@ verbad <- sprintf('<a href="https://img.shields.io/badge/Version-%s-orange.svg">
 2.  [RStudio](http://www.rstudio.com/) for GUI 
 3.  [**testthat**](http://cran.r-project.org/web/packages/testthat/index.html) for unit testing
 4.  [Coveralls](https://coveralls.io/) + [**covr**](https://github.com/jimhester/covr) for code coverage rating
-5.  [**devtools**](http://cran.r-project.org/web/packages/devtools/index.html)/[**roxygen2**](http://cran.r-project.org/web/packages/roxygen2/index.html)
+5.  [**devtools**](http://cran.r-project.org/web/packages/devtools/index.html)/[**roxygen2**](http://cran.r-project.org/web/packages/roxygen2/index.html) for documentation 
 6.  [**knitr**](http://yihui.name/knitr/) for README managment
 
 **goldpack** allows the user to specify argument (locally or via options in .Rprofile)...***UNDER CONSTRUCTION***  
