--- a/README.Rmd
+++ b/README.Rmd
@@ -1,4 +1,4 @@
-goldpack
+pax
 =======
 
 ```{r, echo=FALSE}
@@ -9,17 +9,17 @@ ver <- gsub(regex, "\\2", desc[loc])
 verbad <- sprintf('<a href="https://img.shields.io/badge/Version-%s-orange.svg"><img src="https://img.shields.io/badge/Version-%s-orange.svg" alt="Version"/></a></p>', ver, ver)
 ````
 
-[![Build Status](https://travis-ci.org/trinker/goldpack.png?branch=master)](https://travis-ci.org/trinker/goldpack)
-[![Coverage Status](https://coveralls.io/repos/trinker/goldpack/badge.png?branch=master)](https://coveralls.io/r/trinker/goldpack?branch=master)
-[![DOI](https://zenodo.org/badge/5398/trinker/goldpack.svg)](http://dx.doi.org/10.5281/zenodo.15758)
+[![Build Status](https://travis-ci.org/trinker/pax.png?branch=master)](https://travis-ci.org/trinker/pax)
+[![Coverage Status](https://coveralls.io/repos/trinker/pax/badge.png?branch=master)](https://coveralls.io/r/trinker/pax?branch=master)
+[![DOI](https://zenodo.org/badge/5398/trinker/pax.svg)](http://dx.doi.org/10.5281/zenodo.15758)
 `r verbad`
 
 ## A Gold Version R Package Template
 
 
-<img src="inst/goldpack_logo/r_goldpack.png" width="20%", alt="">  
+<img src="inst/pax_logo/r_pax.png" width="20%", alt="">  
 
-[**goldpack**](http://trinker.github.io/goldpack_dev) is a package template system that is NOT designed to be light weight.  It is the delux, gold version of a package template.  **goldpack** is not flexible, rather it maintains and enforces a narrow package management philosophy.  It expects the user will utilize:
+[**pax**](http://trinker.github.io/pax_dev) is a package template system that is NOT designed to be light weight.  It is the delux, pax version of a package template.  **pax** is not flexible, rather it maintains and enforces a narrow package management philosophy.  It expects the user will utilize:
 
 1.  [GitHub](https://github.com) for repository sharing
 2.  [RStudio](http://www.rstudio.com/) for GUI 
@@ -28,31 +28,31 @@ verbad <- sprintf('<a href="https://img.shields.io/badge/Version-%s-orange.svg">
 5.  [**devtools**](http://cran.r-project.org/web/packages/devtools/index.html)/[**roxygen2**](http://cran.r-project.org/web/packages/roxygen2/index.html) for documentation 
 6.  [**knitr**](http://yihui.name/knitr/) for README managment
 
-**goldpack** allows the user to specify argument (locally or via options in .Rprofile)...***UNDER CONSTRUCTION***  
+**pax** allows the user to specify argument (locally or via options in .Rprofile)...***UNDER CONSTRUCTION***  
 
 
 ## Installation
 
-To download the development version of goldpack:
+To download the development version of pax:
 
-Download the [zip ball](https://github.com/trinker/goldpack/zipball/master) or [tar ball](https://github.com/trinker/goldpack/tarball/master), decompress and run `R CMD INSTALL` on it, or use the **pacman** package to install the development version:
+Download the [zip ball](https://github.com/trinker/pax/zipball/master) or [tar ball](https://github.com/trinker/pax/tarball/master), decompress and run `R CMD INSTALL` on it, or use the **pacman** package to install the development version:
 
 ```r
 if (!require("pacman")) install.packages("pacman")
-pacman::p_load_gh("trinker/goldpack")
+pacman::p_load_gh("trinker/pax")
 ```
 
 ## Help
 
-- [Web Page](http://trinker.github.com/goldpack/)     
-- [HTML Vignette: Introduction to goldpack](http://trinker.github.io/goldpack/vignettes/introduction.html)       
-- [Package PDF Help Manual](https://dl.dropboxusercontent.com/u/61803503/goldpack.pdf)   
+- [Web Page](http://trinker.github.com/pax/)     
+- [HTML Vignette: Introduction to pax](http://trinker.github.io/pax/vignettes/introduction.html)       
+- [Package PDF Help Manual](https://dl.dropboxusercontent.com/u/61803503/pax.pdf)   
 
 ## Contact
 
 You are welcome to:
-* submit suggestions and bug-reports at: <https://github.com/trinker/goldpack/issues>
-* send a pull request on: <https://github.com/trinker/goldpack/>
+* submit suggestions and bug-reports at: <https://github.com/trinker/pax/issues>
+* send a pull request on: <https://github.com/trinker/pax/>
 * compose a friendly e-mail to: <tyler.rinker@gmail.com>
 
 
