--- a/README.Rmd
+++ b/README.Rmd
@@ -28,15 +28,17 @@ verbad <- sprintf('<a href="https://img.shields.io/badge/Version-%s-orange.svg">
 5.  [**devtools**](http://cran.r-project.org/web/packages/devtools/index.html)/[**roxygen2**](http://cran.r-project.org/web/packages/roxygen2/index.html) for documentation 
 6.  [**knitr**](http://yihui.name/knitr/) for README managment
 
-**pax** has one main function that does one job.  `pax` (package and function named **pax**) creates a package template.  It allows the user to specify construction arguments (locally or via options in *.Rprofile*). These arguments that can be set in the *.Rprofile* include:
+**pax** has one main function that does one job.  `pax` (package and function named **pax**) creates a package template.  It allows the user to specify construction arguments (locally or [via options in *.Rprofile*](http://www.statmethods.net/interface/customizing.html)). These arguments that can be set in the *.Rprofile* include:
 
 
-| Argument         |  Task                                       | Example                                             |
+| Argument         |  Description                                       | Example                                             |
 |------------------|---------------------------------------------|-----------------------------------------------------|
-| `name`  | The user's name (vector of length 2: first and last) |   `options(name = c(first="Tyler",  last="Rinker"))`|                 |
+| `name`  | The user's name (first & last) |   `options(name = c(first="Tyler",  last="Rinker"))`|                 |
+| `email`  | The user's email address |   `options(email = "tyler.rinker@gmail.com")`|  
+| `github.user`  | The user's [GitHub](https://github.com) name |   `options(github.user = "trinker")`|  
+| `tweak`  | \*A path or url to a user specified 'tweaking' function |   `options(tweak = "https://gist.github.com/trinker/fc346e6b60e60839eb95")`| 
 
-
-
+\****Note***: *See `?oax` for more information about the `tweak` argument.*
 
 ## Installation
 
