--- a/README.Rmd
+++ b/README.Rmd
@@ -36,9 +36,9 @@ verbad <- sprintf('<a href="https://img.shields.io/badge/Version-%s-orange.svg">
 | `name`  | The user's name (first & last) |   `options(name = c(first="Tyler",  last="Rinker"))`|                 |
 | `email`  | The user's email address |   `options(email = "tyler.rinker@gmail.com")`|  
 | `github.user`  | The user's [GitHub](https://github.com) name |   `options(github.user = "trinker")`|  
-| `tweak`  | \*A path or url to a user specified 'tweaking' function |   `options(tweak = "https://gist.github.com/trinker/fc346e6b60e60839eb95")`| 
+| `tweak`  | A path or url to a user specified 'tweaking' function\* |   `options(tweak = "https://gist.github.com/trinker/fc346e6b60e60839eb95")`| 
 
-\****Note***: *See `?oax` for more information about the `tweak` argument.*
+\****Note***: *See `?pax` for more information about the `tweak` argument.*
 
 ## Installation
 
