--- a/README.Rmd
+++ b/README.Rmd
@@ -36,7 +36,7 @@ verbad <- sprintf('<a href="https://img.shields.io/badge/Version-%s-orange.svg">
 | `name`  | The user's name (first & last) |   `options(name = c(first="Tyler",  last="Rinker"))`|                 |
 | `email`  | The user's email address |   `options(email = "tyler.rinker@gmail.com")`|  
 | `github.user`  | The user's [GitHub](https://github.com) name |   `options(github.user = "trinker")`|  
-| `tweak`  | A path, [url](http://goo.gl/z7aN3P) to a user specified 'tweaking' function\* |   `options(tweak = "http://goo.gl/z7aN3P")`| 
+| `tweak`  | A path, [url](http://goo.gl/oL7UXO) to a user specified 'tweaking' function\* |   `options(tweak = "http://goo.gl/oL7UXO")`| 
 
 \****Note***: *See `?pax` for more information about the `tweak` argument.*
 
