--- a/inst/templates/README.Rmd
+++ b/inst/templates/README.Rmd
@@ -8,8 +8,9 @@ ver <- gsub(regex, "\\2", desc[loc])
 verbadge <- sprintf('<a href="https://img.shields.io/badge/Version-%%s-orange.svg"><img src="https://img.shields.io/badge/Version-%%s-orange.svg" alt="Version"/></a></p>', ver, ver)
 ````
 
-[![Build Status](https://travis-ci.org/%s/%s.png?branch=master)](https://travis-ci.org/trinker/%s)
-[![Coverage Status](https://coveralls.io/repos/%s/%s/badge.png?branch=master)](https://coveralls.io/r/%s/%s?branch=master)
+[![Build Status](https://travis-ci.org/%s/%s.svg?branch=master)](https://travis-ci.org/%s/%s)
+[![Coverage Status](https://coveralls.io/repos/%s/%s/badge.svg?branch=master)](https://coveralls.io/r/%s/%s?branch=master)
+
 `r verbadge`
 
 **%s** is...
