* `new_vignette` added to quickly add **rmarkdown** style vignette tempaltes.

--- a/NEWS
+++ b/NEWS
@@ -47,6 +47,8 @@ NEW FEATURES
 * `pax_options` added to generate a script template of blank **pax** options 
   that can be added to *.Rprofile*.
 
+* `new_vignette` added to quickly add **rmarkdown** style vignette tempaltes.
+
 
 MINOR FEATURES
 
