--- a/NEWS
+++ b/NEWS
@@ -18,6 +18,20 @@ And constructed with the following guidelines:
 
 * Bug fixes and misc changes bumps the patch
 
+CHANGES IN pax VERSION 0.1.0
+----------------------------------------------------------------
+
+First stable release.
+
+BUG FIXES
+
+NEW FEATURES
+
+MINOR FEATURES
+
+IMPROVEMENTS
+
+CHANGES
 
 CHANGES IN pax VERSION 0.0.3
 ----------------------------------------------------------------
@@ -61,8 +75,6 @@ MINOR FEATURES
 IMPROVEMENTS
 
 * The **README.Rmd** uses *.svg* badges rather than *.png* badges.
-
-CHANGES
 
 
 CHANGES IN pax VERSION 0.0.2
