--- a/README.Rmd
+++ b/README.Rmd
@@ -109,6 +109,12 @@ The `new_data` enables the user to add a data set to the *data* directory and ap
 - [HTML Vignette: Introduction to pax](http://trinker.github.io/pax/vignettes/introduction.html)       
 - [Package PDF Help Manual](https://dl.dropboxusercontent.com/u/61803503/pax.pdf)   
 
+## Additional Package Development Resources
+
+- [Writing R Extensions](http://cran.r-project.org/doc/manuals/r-release/R-exts.html)
+- [RStudio Package Development Cheat Sheet](http://www.rstudio.com/wp-content/uploads/2015/03/devtools-cheatsheet.pdf)    
+- [R packages by Hadley Wickham](http://r-pkgs.had.co.nz/)
+
 ## Contact
 
 You are welcome to:
