updated the readme b/c the yaml had % in it (sprintf does not like)

--- a/inst/templates/README.Rmd
+++ b/inst/templates/README.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "%s"
-date: "`r format(Sys.time(), '%d %B, %Y')`"
+date: "`r format(Sys.time(), '%%d %%B, %%Y')`"
 output:
   md_document:
     toc: true      
