--- a/README.Rmd
+++ b/README.Rmd
@@ -46,7 +46,7 @@ verbad <- sprintf('<a href="https://img.shields.io/badge/Version-%s-orange.svg">
 | `email`  | The user's email address |   `options(email = "tyler.rinker@gmail.com")`|  
 | `license` | The package license | `options(license = "GPL-2")` |
 | `github.user`  | The user's [GitHub](https://github.com) name |   `options(github.user = "trinker")`|    
-| `samples` | Logical; if `TRUE`, sample *.R* & *test-FUN_NAME.R* added | `options(samples = FALSE)` |     
+| `samples` | Logical; if `TRUE`, sample *.R* & *test-.R* added | `options(samples = FALSE)` |     
 | `tweak`  | A function or path/[url](http://goo.gl/oL7UXO) to a user specified 'tweaking' function\* |   `options(tweak = "http://goo.gl/oL7UXO")`|     
 
 \****Note***: *See `?pax` for more information about the `tweak` argument; [CLICK HERE](https://raw.githubusercontent.com/trinker/pax_tweak/master/pax_tweak.R) for an example.*
