--- a/inst/templates/README.Rmd
+++ b/inst/templates/README.Rmd
@@ -15,7 +15,7 @@ verbadge <- sprintf('<a href="https://img.shields.io/badge/Version-%%s-orange.sv
 ````
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE}
-libraray(knitr)
+library(knitr)
 knit_hooks$set(htmlcap = function(before, options, envir) {
   if(!before) {
     paste('<p class="caption"><b><em>',options$htmlcap,"</em></b></p>",sep="")
